<resources>
    <string name="app_name">クルーアプリ</string>

    <!-- Strings related to nav -->
    <string name="app_joy_shift">クルーアプリ</string>
    <string name="nav_shift_app">　休日申込一覧</string>
    <string name="nav_shift">　週間シフト</string>
    <string name="nav_ws_actual">　個人別勤務実績</string>

    <string name="nav_logout">ログアウト</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">クルーアプリ</string>

    <!-- Strings related to login -->
    <string name="prompt_loginid">ログインID</string>
    <string name="prompt_password">パスワード</string>
    <string name="action_sign_in">ログイン</string>
    <string name="error_incorrect_password">ログインに失敗しました</string>
    <string name="error_field_required">入力してください</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="message_token_error">認証エラーが発生しました</string>
    <string name="message_connection">ネットワークに接続していません</string>
    <string name="message_login_error">認証エラーが発生しました</string>
    <string name="message_redirect_error">ログインに失敗しました</string>
    <string name="message_regist_push_error">通知の登録に失敗しました</string>
    <string name="action_ok">OK</string>
    <string name="message_session_error">認証エラーが発生しました</string>
    <string name="message_info_error">認証エラーが発生しました</string>

</resources>
